[package]
authors = ["Chris West (Faux) <git@goeswhere.com>"]
name = "mid-tool"
version = "0.1.0"

[dependencies]
clap = "2.26.1"
deb-version = "0.1.0"
error-chain = "0.11"
git2 = "0.6.8"
reqwest = "0.8"
tempfile-fast = "0.1.1"
time = "0.1"
xdg = "2.1"
zstd = "0.4.14"

[dependencies.casync-http]
path = "../../casync-rs/http"

[dependencies.casync-format]
path = "../../casync-rs/format"
